--- a/AutoFixtureDemo/AutoFixtureDemo.csproj
+++ b/AutoFixtureDemo/AutoFixtureDemo.csproj
@@ -73,8 +73,9 @@
   <ItemGroup>
     <Compile Include="001_Primitives.cs" />
     <Compile Include="002_CustomTypes.cs" />
-    <Compile Include="003_Customizations.cs" />
+    <Compile Include="903_Customizations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="003_XUnitIntegration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
