Add NSubstitute demo

--- a/AutoFixtureDemo/AutoFixtureDemo.csproj
+++ b/AutoFixtureDemo/AutoFixtureDemo.csproj
@@ -75,6 +75,7 @@
     <Compile Include="002_CustomTypes.cs" />
     <Compile Include="903_Customizations.cs" />
     <Compile Include="003_FreezeInject.cs" />
+    <Compile Include="005_NSubstituteIntegration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="004_XUnitIntegration.cs" />
   </ItemGroup>
