--- a/Application.UnitTests/packages.config
+++ b/Application.UnitTests/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoFixture.AutoNSubstitute" version="4.0.0-rc1" targetFramework="net461" />
   <package id="AutoFixture.Xunit2" version="4.0.0-rc1" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
