--- a/Application.UnitTests/Application.UnitTests.csproj
+++ b/Application.UnitTests/Application.UnitTests.csproj
@@ -82,8 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoNSubstituteData.cs" />
+    <Compile Include="InlineAutoNSubstituteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\LoginManagerTest.cs" />
+    <Compile Include="Security\MembershipManagerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
