--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -47,10 +47,10 @@
   <ItemGroup>
     <Compile Include="Diagnostics\ILog.cs" />
     <Compile Include="Eventing\IEventEmitter.cs" />
+    <Compile Include="Diagnostics\NullLog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\IPasswordChecker.cs" />
-    <Compile Include="Security\IUserProfileManager.cs" />
     <Compile Include="Security\MembershipManager.cs" />
     <Compile Include="Security\IPasswordHasher.cs" />
     <Compile Include="Security\IUserRepository.cs" />
