--- a/Application.UnitTests/packages.config
+++ b/Application.UnitTests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="4.0.0-rc1.46" targetFramework="net461" />
-  <package id="AutoFixture.AutoNSubstitute" version="4.0.0-rc1" targetFramework="net461" />
-  <package id="AutoFixture.Xunit2" version="4.0.0-rc1" targetFramework="net461" />
+  <package id="AutoFixture" version="4.0.0" targetFramework="net461" />
+  <package id="AutoFixture.AutoNSubstitute" version="4.0.0" targetFramework="net461" />
+  <package id="AutoFixture.Xunit2" version="4.0.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
