--- a/AutoFixtureDemo/AutoFixtureDemo.csproj
+++ b/AutoFixtureDemo/AutoFixtureDemo.csproj
@@ -35,13 +35,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoFixture, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoFixture.4.0.0-rc1.46\lib\net452\AutoFixture.dll</HintPath>
+      <HintPath>..\packages\AutoFixture.4.0.0\lib\net452\AutoFixture.dll</HintPath>
     </Reference>
-    <Reference Include="AutoFixture.AutoNSubstitute, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f">
-      <HintPath>..\packages\AutoFixture.AutoNSubstitute.4.0.0-rc1\lib\net452\AutoFixture.AutoNSubstitute.dll</HintPath>
+    <Reference Include="AutoFixture.AutoNSubstitute, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.AutoNSubstitute.4.0.0\lib\net452\AutoFixture.AutoNSubstitute.dll</HintPath>
     </Reference>
-    <Reference Include="AutoFixture.Xunit2, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f">
-      <HintPath>..\packages\AutoFixture.Xunit2.4.0.0-rc1\lib\net452\AutoFixture.Xunit2.dll</HintPath>
+    <Reference Include="AutoFixture.Xunit2, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.Xunit2.4.0.0\lib\net452\AutoFixture.Xunit2.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
