--- a/AutoFixtureDemo/packages.config
+++ b/AutoFixtureDemo/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="4.0.0-rc1.46" targetFramework="net462" />
-  <package id="AutoFixture.AutoNSubstitute" version="4.0.0-rc1" targetFramework="net462" />
-  <package id="AutoFixture.Xunit2" version="4.0.0-rc1" targetFramework="net462" />
+  <package id="AutoFixture" version="4.0.0" targetFramework="net462" />
+  <package id="AutoFixture.AutoNSubstitute" version="4.0.0" targetFramework="net462" />
+  <package id="AutoFixture.Xunit2" version="4.0.0" targetFramework="net462" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net462" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
