--- a/code/Application.UnitTests/Application.UnitTests.csproj
+++ b/code/Application.UnitTests/Application.UnitTests.csproj
@@ -81,7 +81,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoNSubstituteData.cs" />
+    <Compile Include="InlineAutoNSubstituteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\MembershipManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
