--- a/code/Application/Application.csproj
+++ b/code/Application/Application.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Diagnostics\ILog.cs" />
     <Compile Include="Diagnostics\NullLog.cs" />
+    <Compile Include="Eventing\IEventEmitter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\IPasswordChecker.cs" />
